# ptx-math

./: .editorconfig  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  main.cu  makefile
TableGeneration/: EnhancedMinimax.wl  ErrorOutput.wl  GenerateEx2Coeffts.wls  GenerateLg2Coeffts.wls  GenerateRcpCoeffts.wls  GenerateReciprocalCoeffts.wls  GenerateRsqrtCoeffts.wls  GenerateSinCoeffts.wls  GenerateSqrtCoeffts.wls  TableOutput.wl
apps/: CMakeLists.txt
apps/driver/: CMakeLists.txt  main.cpp
apps/validation/: CMakeLists.txt  main.cu
model/: .editorconfig  CMakeLists.txt  cuda_check.cu  cuda_check.h  cuda_check.hpp  cuda_util.cpp  cuda_util.cu  cuda_util.hpp  main.cu  makefile  ptx.hpp  stopwatch.hpp
model/model/: CMakeLists.txt  cos.c  ex2.c  lg2.c  model.c  model.h  nan.c  nan.h  params.h  rcp.c  rsqrt.c  sin.c  sincos.c  sqrt.c  tuning.h
model/model/common/: CMakeLists.txt  bitcast.c  bitcast.h  bitmask.h  fpassert.h  fpmanip.c  fpmanip.h  nan.h  squarer.c  squarer.h
model/model/reduction/: CMakeLists.txt  rro_sincos.c  rro_sincos.h
model/model/tables/: CMakeLists.txt  ex2_table.c  rcp_table.c  (+5 more)
model/ptx/: CMakeLists.txt  ptx.hpp
model/tuning/: CMakeLists.txt  basic_counters.cpp  basic_counters.hpp  batching.hpp  bias.cpp  bias.hpp  binsearch.cpp  binsearch.hpp  coefficients.cpp  coefficients.hpp  interval.hpp  search.cpp  search.hpp  test_handler.cpp  test_handler.hpp  testing.cpp  testing.hpp
model/tuning/algorithm/: CMakeLists.txt  binsearch.cpp
model/tuning/base/: CMakeLists.txt  batching.cpp  batching.hpp  counters.cpp  counters.hpp  fntypes.hpp  testing.cpp  testing.hpp
model/util/: CMakeLists.txt  cuda.cu  cuda.hpp  devices.cu  devices.hpp  progress.cpp  progress.hpp  running_stats.hpp  stopwatch.hpp  tally.hpp
model/validation/: CMakeLists.txt  main.cu
src/: CMakeLists.txt
src/model/: ex2.c  lg2.c  rsqrt.c  sqrt.c
src/ptx/: CMakeLists.txt  ptx.cuh
src/ptxm/: CMakeLists.txt  ex2.c  lg2.c  models.h  params.h  rcp.c  rcp_f64.c  rsqrt.c  rsqrt_f64.c  sincos.c  sqrt.c  tuning.h
src/ptxm/common/: CMakeLists.txt  bitcast.h  bitmask.h  nan.c  nan.h  squarer.c  squarer.h  util.h
src/ptxm/reduction/: CMakeLists.txt  rro_sincos.c  rro_sincos.h
src/ptxm/tables/: CMakeLists.txt  ex2_table.c  ex2_table.h  lg2_table.c  lg2_table.h  rcp_table.c  rcp_table.h  rsqrt_table.c  rsqrt_table.h  sin_table.c  sin_table.h  sqrt_table.c  sqrt_table.h
src/ptxs/: CMakeLists.txt  ex2.c  lg2.c  models.h  params.h  rcp.c  rsqrt.c  sincos.c  sqrt.c  tuning.h
src/ptxs/common/: CMakeLists.txt  bitcast.h  bitmask.h  fpassert.h  fpmanip.h  nan.c  nan.h  squarer.c  squarer.h  util.h
src/ptxs/reduction/: CMakeLists.txt  rro_sincos.c  rro_sincos.h
src/ptxs/tables/: CMakeLists.txt  ex2_table.c  ex2_table.h  lg2_table.c  lg2_table.h  rcp_table.c  rcp_table.h  rsqrt_table.c  rsqrt_table.h  sin_table.c  sin_table.h  sqrt_table.c  sqrt_table.h
src/tuning/: CMakeLists.txt  basic_counters.cpp  basic_counters.hpp  batching.cpp  batching.hpp  bias.cpp  bias.hpp  binsearch.hpp  coefficients.cpp  coefficients.hpp  common.hpp  counter.hpp  counters.cpp  counters.hpp  model.hpp  sign_counter.cpp  sign_counter.hpp  test_handler.cpp  test_handler.hpp  testing.cpp  testing.hpp
src/tuning/algorithm/: binsearch.hpp
src/tuning/base/: CMakeLists.txt  batching.hpp  counters.hpp  fntypes.hpp  interval.hpp  testing.hpp
src/util/: CMakeLists.txt  cuda.cu  cuda.cuh  cuda.hpp  devices.cu  devices.cuh  devices.hpp  progbar.cpp  progbar.hpp  progress.cpp  pun.hpp  stopwatch.hpp
tools/TableGeneration/: EnhancedMinimax.wl  GenerateRcpCoeffts.wls  GenerateRsqrtCoeffts.wls
(+3 files in other folders)
